--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
+
+
+.Main_title {
+  border: 1px solid black;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
+  width: 40%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Login_access_button {
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  margin: 1%;
+  width: 20%;
+  background-color: #f3e304;
+  padding: 12px 20px;
+  color: black;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Logout_button {
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  margin: 1%;
+  width: 20%;
+  background-color: #f3e304;
+  padding: 12px 20px;
+  color: black;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Register_access_button {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  margin: 1%;
+  width: 20%;
+  background-color: #f3e304;
+  padding: 12px 20px;
+  color: black;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+
+.LoginRegister_data {
+  width: 75%;
+  padding: 12px 20px;
+  margin: 1%;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.LoginRegister_button {
+  width: 75%;
+  background-color: #f3e304;
+  color: black;
+  padding: 14px 20px;
+  margin: 1%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.LoginRegister_button:hover {
+  background-color: #ecc30c;
+}
+
+div {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
 }
